<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="440dp"
	android:background="@android:color/transparent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:background="@drawable/background_gradient">

	<FrameLayout
		android:layout_width="180dp"
		android:layout_height="180dp"
		android:layout_marginTop="56dp"
		android:background="@drawable/shape_outer_circle">

		<FrameLayout
			android:id="@+id/innerCircle"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:background="@drawable/shape_inner_circle">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:lineSpacingMultiplier="1.17"
				android:text="@string/begin"
				android:textAllCaps="true"
				android:textAppearance="@style/Arial"
				android:textColor="@color/textInitial"
				android:textSize="24sp" />

		</FrameLayout>
	</FrameLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:alpha="0.36"
		android:text="@string/mode"
		android:textAllCaps="true"
		android:textAppearance="@style/Arial"
		android:textColor="@color/textInitial"
		android:textSize="12sp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/real_time"
		android:textAllCaps="true"
		android:textAppearance="@style/Arial"
		android:textColor="@color/textInitial"
		android:textSize="20sp" />

</LinearLayout>