<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="440dp"
	android:background="@drawable/background_gradient"
	tools:context="br.com.intelize.trenagps.ui.finish.SaveOrCancelActivity">

	<FrameLayout
		android:id="@+id/frameLayout"
		android:layout_width="180dp"
		android:layout_height="180dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="96dp"
		android:background="@drawable/shape_outer_circle">

		<RelativeLayout
			android:id="@+id/innerCircle"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:background="@drawable/shape_inner_circle">

			<TextView
				android:id="@+id/measuredValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="50dp"
				android:lineSpacingMultiplier="1.17"
				android:textAllCaps="true"
				android:textAppearance="@style/Arial"
				android:textColor="@color/colorDetails"
				android:textSize="24sp"
				tools:text="124" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/measuredValue"
				android:layout_centerHorizontal="true"
				android:lineSpacingMultiplier="1.17"
				android:text="@string/meters"
				android:textAppearance="@style/Arial"
				android:textColor="@color/colorDetails"
				android:textSize="12sp" />

		</RelativeLayout>
	</FrameLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/measureNameLabel"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="16dp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/discardButton"
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:background="@drawable/shape_button_cancel"
			android:text="@string/cancel"
			android:textAllCaps="true"
			android:textAppearance="@style/Arial"
			android:textColor="@color/cancelButtonText"
			android:textSize="12sp"
			tools:ignore="ButtonStyle" />

		<Button
			android:id="@+id/saveButton"
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginStart="24dp"
			android:background="@drawable/shape_button_accept"
			android:text="@string/save"
			android:textAllCaps="true"
			android:textAppearance="@style/Arial"
			android:textColor="@color/acceptButtonText"
			android:textSize="12sp"
			tools:ignore="ButtonStyle" />

	</LinearLayout>

	<TextView
		android:id="@+id/measureNameLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/measureName"
		android:layout_centerHorizontal="true"
		android:alpha="0.36"
		android:labelFor="@id/measureName"
		android:lineSpacingMultiplier="1.10"
		android:text="@string/define_name"
		android:textAllCaps="true"
		android:textAppearance="@style/Arial"
		android:textColor="@color/textInitial"
		android:textSize="12sp" />

	<EditText
		android:id="@+id/measureName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="40dp"
		android:layout_marginEnd="36dp"
		android:layout_marginStart="36dp"
		android:backgroundTint="@color/pureWhite"
		android:inputType="textCapWords"
		android:textAlignment="center"
		android:maxLength="36"
		android:textAppearance="@style/Arial"
		android:textColor="@color/textInitial"
		android:textSize="20sp" />

</RelativeLayout>
